release 0.7 (2008-04-18)
- Client API supports the addition of cookies that are instances of
  javax.ws.rs.core.Cookie.
- Renamed HttpContextAccess to HttpContext. Changed getHttpRequestContext
  and getHttpResponseContext methods to getRequest and getResponse respectively.
- UriRuleContext extends HttpContext. Removed UriRuleContext.getHttpContext()
  method.
- UriInfo interface is removed from HttpRequestContext. UriInfo is now
  accessible from HttpContext.getUriInfo()
- Fixed issue 44: Support dependency injection of proxied resources
  https://jersey.dev.java.net/issues/show_bug.cgi?id=44
  Added method ComponentProvider.getInjectableInstance
- The AbstractContainerResponse.writeEntity methods are reduced to one
  method that takes no arguments. This is responsible for committing the
  status, headers and writing out the entity (if any), and returning a 406
  (Not Acceptable) if a message body reader could not be found to serialize
  the entity for the required media type.
- The AbstractContainerResponse.commitStatusAndHeaders was modified to take
  a parameter that is the known length in bytes of the entity to be written
  as the representation of a response.
- Partially Integrated JSR 311 API 0.7
  - Use @Context to inject HttpServletRequest, HttpServletResponse, 
    ServletConfig and ServletContext instances on JAX-RS/Jersey-based 
    components deployed in Servlet container.
  - UriBuilder.build(String... values) changed to 
    UriBuilder.build(Object... values). 
    UriBuilder.build(Map<String, String> values) changed to 
    UriBuilder.build(Map<String, Object> values).
    The Object instances must support the toString method.
  - Message body writer for javax.ws.rs.core.StreamingOutput.
  - Message body reader/writer for java.io.Reader.
  - Message body reader/writer for javax.xml.transform.Source
    Only the following Java types are supported for reading:
      - javax.xml.transform.stream.StreamSource
      - javax.xml.transform.sax.SAXSource